<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.otn.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


<!--    <fragment-->
<!--        android:id="@+id/nav_bike"-->
<!--        android:name="com.example.otn.ui.bike_qr.BikeFragment"-->
<!--        android:label="@string/menu_bike"-->
<!--        tools:layout="@layout/fragment_bike" />-->

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.otn.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.otn.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.otn.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
    <activity
        android:id="@+id/nav_map"
        android:name="com.example.otn.MapsActivity"
        android:label="@string/menu_map" />
    <activity
        android:id="@+id/nav_bike"
        android:name="com.example.otn.qr_MainActivity"
        android:label="@string/menu_bike"
        />
</navigation>